samples/_failures_safe/1761126603_82da6e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e7f67734.c: In function ‘main’:
./samples/SAFE/__tmp_e7f67734.c:165:5: error: expected expression at end of input
  165 |     if (mat1.rows == -1 || mat1.cols ==
      |     ^~
./samples/SAFE/__tmp_e7f67734.c:165:5: error: expected declaration or statement at end of input
